// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionTextWithInfoComponent should not show control link and question details for TEXT questions 1`] = `
<tm-question-text-with-info
  FeedbackQuestionType={[Function Object]}
  additionalInfoIsExpanded="false"
  downloadQuestionResultEvent={[Function EventEmitter]}
  questionDetails={[Function Object]}
  questionNumber="0"
>
  <span
    class="d-inline-flex"
  >
    <button
      class="btn btn-link text-white padding-0 mr-1"
      ngbtooltip="Download Question Results"
      opendelay="500"
      type="button"
    >
      <b>
        Question 0:
      </b>
    </button>
    Text question details 
    
  </span>
</tm-question-text-with-info>
`;

exports[`QuestionTextWithInfoComponent should show control link when question type is not TEXT 1`] = `
<tm-question-text-with-info
  FeedbackQuestionType={[Function Object]}
  additionalInfoIsExpanded="false"
  downloadQuestionResultEvent={[Function EventEmitter]}
  questionDetails={[Function Object]}
  questionNumber="0"
>
  <span
    class="d-inline-flex"
  >
    <button
      class="btn btn-link text-white padding-0 mr-1"
      ngbtooltip="Download Question Results"
      opendelay="500"
      type="button"
    >
      <b>
        Question 0:
      </b>
    </button>
    MCQ question details 
    
    <a
      class="info-font-size ml-1"
      href="/"
      queryparamshandling="merge"
    >
       [more] 
    </a>
  </span>
</tm-question-text-with-info>
`;

exports[`QuestionTextWithInfoComponent should show question detail when click control link 1`] = `
<tm-question-text-with-info
  FeedbackQuestionType={[Function Object]}
  additionalInfoIsExpanded={[Function Boolean]}
  downloadQuestionResultEvent={[Function EventEmitter]}
  questionDetails={[Function Object]}
  questionNumber="0"
>
  <span
    class="d-inline-flex"
  >
    <button
      class="btn btn-link text-white padding-0 mr-1"
      ngbtooltip="Download Question Results"
      opendelay="500"
      type="button"
    >
      <b>
        Question 0:
      </b>
    </button>
    MCQ question details 
    
    <a
      class="info-font-size ml-1"
      href="/"
      queryparamshandling="merge"
    >
       [less] 
    </a>
  </span><div
    class="info-font-size"
  >
    
    
    
    <tm-mcq-question-additional-info>
      Multiple-choice (single answer) question options:
  
      
      
      <ul>
        
        <li>
          a
        </li>
        <li>
          b
        </li>
        
      </ul>
    </tm-mcq-question-additional-info>
    
    
    
    
    
    
    
  </div>
</tm-question-text-with-info>
`;
